<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>no.nav.security</groupId>
    <artifactId>token-support</artifactId>
    <version>0.1.4-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
		<module>oidc-support</module>
		<module>oidc-spring-support</module>
		<module>oidc-spring-test</module>
	</modules>    

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <java.version>1.8</java.version>
        <spring-boot.version>2.0.0.RELEASE</spring-boot.version>
		<oauth2-oidc-sdk.version>5.17.1</oauth2-oidc-sdk.version>    
    </properties>
	
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-web</artifactId>
				<version>${spring-boot.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-test</artifactId>
				<version>${spring-boot.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.security</groupId>
				<artifactId>oidc-support</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.security</groupId>
				<artifactId>oidc-spring-support</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.security</groupId>
				<artifactId>oidc-spring-test</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.nimbusds</groupId>
				<artifactId>oauth2-oidc-sdk</artifactId>
				<version>${oauth2-oidc-sdk.version}</version>
			</dependency>
	
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>1.7.25</version>
			</dependency>
	
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>servlet-api</artifactId>
				<version>2.5</version>
				<scope>provided</scope>
			</dependency>
	
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.12</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<distributionManagement>
       <repository>
          <id>nexus-internal</id>
          <name>NAV internal Nexus</name>
          <url>https://repo.adeo.no/repository/maven-releases</url>
        </repository>
         
        <snapshotRepository>
            <id>nexus-internal-snapshot</id>
            <name>NAV Snapshot Repository</name>
            <url>https://repo.adeo.no/repository/maven-snapshots</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
      
    </distributionManagement>
</project>